--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "laravel/socialite": "^5.15",
-        "illuminate/support": "^10.48"
+        "illuminate/support": "^10.48",
+        "php": "^7.4|^8.0"
     },
     "autoload": {
         "psr-4": {
