--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,32 @@
 {
-    "name": "advanced-solutions/iceland-electronic-id",
-    "description": "A Laravel package for islands.is socialite integration",
-    "type": "library",
-    "require": {
-        "illuminate/support": "^10.48",
-        "php": "^7.4|^8.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "AdvancedSolutions\\IcelandElectronicId\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Bohdan Suprun",
-            "email": "bohdan-suprun@outlook.com"
-        }
-    ],
-    "extra": {
-        "laravel": {
-            "providers": [
-                "AdvancedSolutions\\IcelandElectronicId\\IslandsServiceProvider"
-            ]
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "license": "MIT"
+  "name": "advanced-solutions/iceland-electronic-id",
+  "description": "A Laravel package for islands.is socialite integration",
+  "type": "library",
+  "require": {
+    "php": "^7.4|^8.0",
+    "illuminate/support": "^8.0|^9.0|^10.0",
+    "guzzlehttp/guzzle": "^7.0",
+    "ext-json": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "AdvancedSolutions\\IcelandElectronicId\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Bohdan Suprun",
+      "email": "bohdan-suprun@outlook.com"
+    }
+  ],
+  "extra": {
+    "laravel": {
+      "providers": [
+        "AdvancedSolutions\\IcelandElectronicId\\IslandsServiceProvider"
+      ]
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "license": "MIT"
 }
